# MCAOE

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DONATIONS.md  LICENSE  Makefile  README.md  README_SECURITY_SETUP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.archive/: idea.bak  prompt.bak  pyproject.toml.bak
.github/workflows/: ci.yml
.mcaoe/: mcaoe.sqlite3  nikto-smoke.sqlite3  smoke.sqlite3  whatweb-smoke.sqlite3
containers/: Dockerfile.tools
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  plugins.md
src/mcaoe/: __init__.py  app.py  config.py  logging.py  policy.py
src/mcaoe/_compat/: __init__.py  pydantic.py
src/mcaoe/ai/: __init__.py  assistant.py  provider.py
src/mcaoe/analysis/: __init__.py  gaps.py
src/mcaoe/core/: __init__.py  events.py  workflow.py
src/mcaoe/database/: __init__.py  store.py
src/mcaoe/execution/: __init__.py  orchestrator.py  provider.py
src/mcaoe/graph/: __init__.py  engine.py
src/mcaoe/models/: __init__.py  domain.py
src/mcaoe/observability/: __init__.py  journal.py  replay.py
src/mcaoe/parsers/: __init__.py  ffuf.py  nikto.py  nmap_xml.py  whatweb.py
src/mcaoe/plugins/: __init__.py  base.py  http_tools.py  network_tools.py  nmap.py  registry.py  templates.py
src/mcaoe/profiles/: __init__.py  catalog.py
src/mcaoe/recommendations/: engine.py
src/mcaoe/reports/: __init__.py  session_report.py
src/mcaoe/runtime/: __init__.py  docker.py
src/mcaoe/ui/: __init__.py  app.py  readiness.py
src/mcaoe/workflows/: __init__.py  mvp.py
tests/: test_ai_provider.py  test_app.py  test_assistant.py  test_config.py  test_events.py  test_ffuf_parser.py  test_gaps.py  test_gaps_comprehensive.py  test_graph.py  test_logging.py  test_nikto_parser.py  test_parser.py  test_policy.py  test_profiles.py  test_recommendations.py  test_registry.py  test_replay.py  test_reports.py  test_runtime.py  test_smoke.py  test_store.py  test_ui_readiness.py  test_whatweb_parser.py  test_workflow.py
tools/: ai_keyring_cli.py  capability_smoke.py
