[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcaoe"
version = "0.1.0"
description = "Modular Cybersecurity Analyst Operating Environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Navin B. Ruas", email = "founder@nbr.company" },
]
dependencies = [
    "textual>=0.38.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "docker>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
mcaoe = "mcaoe.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcaoe"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
